--- a/contactos.html
+++ b/contactos.html
@@ -11,7 +11,7 @@
     </head>
     <body class="body_contactos">
         <header class = "hero">
-            <nav class="nav container">
+            <nav class="nav container2">
                 <div class="nav__logo">
                     <h2 class="nav__title">CleanWay</h2>
                 </div>
@@ -44,11 +44,11 @@
         </header>
         <section class="informacion">
         <div class="contacto">
-            <p class="horario">Nuestro horario de atención es de lunes a viernes de 9 a 13 am</p>
+            <p class="horario">Nuestro horario de atención es de lunes a viernes de 9hs a 13hs y de 15:30ha a 19hs</p>
             <div class="info">
                 <div class="item_contacto">
                     <img src="./Imagenes/IconoWhatsapp.svg" alt="WhatsApp">
-                    <a href="https://wa.me/3416161411" class= "item_contacto" target="_blank">Numero del local</a>
+                    <a href="https://wa.me/3416161411" class= "item_contacto" target="_blank">341 6161 411</a>
                 </div>
                 <div class="item_contacto">
                     <img src="./Imagenes/IconoIg.svg" alt="Instagram">
@@ -56,7 +56,7 @@
                 </div>
                 <div class="item_contacto">
                     <img src="./Imagenes/IconoMail.svg" alt="Email">
-                    <a href="mailto:lean.ercoli02@gmail.com" class= "item_contacto" target="_blank">Mail del local </a>
+                    <a href="mailto:" class= "item_contacto" target="_blank"></a>
                 </div>
             </div>
         </div>
