--- a/nosotros.html
+++ b/nosotros.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header class = "hero">
-            <nav class="nav container">
+            <nav class="nav container2">
                 <div class="nav__logo">
                     <h2 class="nav__title">CleanWay</h2>
                 </div>
@@ -49,19 +49,9 @@
                 ofreciendo soluciones efectivas y accesibles para mantener cada espacio impecable. Somos una
                 empresa familiar con un fuerte compromiso con la calidad y el servicio, brindando a nuestros
                 clientes atención personalizada y productos confiables.</p>
-                <p>Podes contactacnos por nuestras redes sociales o visitar nuestro local ubicado en Eva Perón 6869-Rosario, de Lun a Sáb de 8:30hs-13hs/15:30hs-19:30hs </p>
+                <p>Podes contactacnos por nuestras redes sociales o visitar nuestro local ubicado en Eva Perón 6869-Rosario, de lunes a viernes de 8:30hs-13hs/15:30hs-19:30hs y los sabados de 9hs a 14hs </p>
             <a href="productos.html" class="cta">Ver lista de productos</a>
         </section>
-        <section class="contenido">
-            <img src="./Imagenes/FotoAfuera.png" alt="Imagen descriptiva" class="contenido__img">
-            <div class="contenido__texto">
-                <h3>Ofertas del dia:</h3>
-                <p class="parrafos_oferta">*Patilla de cloro: $7900 El kg (4 pastillas) llevando 4kg $30000 ($7500 cada kg)</p>
-                <img src="./Imagenes/pastillasCloro.png" alt="Icono" class="contenido__icono">
-                <a href="productos.html" class="agregar-carrito" data-id="1">Agregar al carrito</a>
-            </div>
-        </section>
-
         <script src="script.js"></script>
     </body>
 </html>
