--- a/carrito.html
+++ b/carrito.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header class="hero">
-            <nav class="nav container">
+            <nav class="nav container2">
                 <div class="nav__logo">
                     <h2 class="nav__title">CleanWay</h2>
                 </div>
@@ -41,8 +41,9 @@
             <h2>Lista de productos en el carrito:</h2>
             <div class="carrito-items" id="carrito-items"></div>
     
-            <p class="envio">Precio de envío: <span id="precio-envio">500</span></p>
-            <p class="total">Total: <span id="total">0</span></p>
+            <p class="envio">Precio de envío: <span id="precio-envio">$5000</span></p>
+            <p>(Envio gratuito con un pedido mayor a $30000)</p>
+            <p class="total">Total: <span id="total"></span></p>
     
             <a href="./datos.html" class="botonCarrito" id="comprar">COMPRAR</a>
         </div>
