--- a/datos.html
+++ b/datos.html
@@ -10,8 +10,9 @@
         <link rel="stylesheet" href="./css/estilos.css">
     </head>
     <body>
+        <div class="container">
         <header class="hero">
-            <nav class="nav container">
+            <nav class="nav container2">
                 <div class="nav__logo">
                     <h2 class="nav__title">CleanWay</h2>
                 </div>
@@ -34,19 +35,20 @@
                 </ul>
             </nav>
         </header>
+        </div>
         <div class="container_datos">
             <p><strong>Datos a completar:</strong></p>
             <div class="form-group">
-                <label>*Direccion de envio:<input type="text" id="direccion"></label>
+                <label place>*Direccion de envio: <input type="text" id="direccion" placeholder="Direccion"></label>
             </div>
             <div class="form-group">
-                <label>*Numero de telefono:<input type="text" id="telefono"></label>
+                <label>*Numero de telefono: <input type="text" id="telefono" placeholder="Telefono"></label>
             </div>
             <div class="form-group">
-                <label>*Nombre:<input type="text" id="nombre"></label>
+                <label>*Nombre: <input type="text" id="nombre" placeholder="Nombre"></label>
             </div>
             <div class="form-group">
-                <label>*Mail:<input type="text" id="mail"></label>
+                <label>*Email: <input type="text" id="mail" placeholder="Email"></label>
             </div>
             <div class="button-container">
                 <button class="botonCarrito" id="botonCompra">Confirmar Compra</button>
@@ -56,6 +58,7 @@
                 <p>- Todos los campos son obligatorios *</p>
             </div>
         </div>
+        
     <script src="script.js"></script>
     </body>
 </html>
